# notificator

./: .space.kts  Cargo.toml  Dockerfile  build-and-push.sh
src/: error_handler.rs  errors.rs  main.rs  structs.rs  utils.rs
src/routes/: mod.rs  notifications.rs  service.rs  structs.rs  twitch.rs
src/routes/twitch/: auth.rs  mod.rs  notifications.rs  service.rs  structs.rs
