[package]
name = "notificator"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "notificator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
serde_json = "1.0.91"
log = "0.4.17"
actix-web = "4.3"
derive_more = "0.99.17"
env_logger = "0.10.0"
sha2 = "0.10.6"
hex = "0.4.3"
lazy_static = "1.4.0"

awc = { version = "3.1", features = ["compress-zstd", "compress-gzip", "rustls"], default-features = false }
validator = { version = "0.16.0", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }